--- a/LPI/css/style.css
+++ b/LPI/css/style.css
@@ -96,7 +96,7 @@ h4 {
     font-size: 24px;
     text-align: center; }
   .sliderText a {
-    box-shadow: inset 5px -5px 10px rgba(13, 140, 204, 0.5);
+    color: #0066cc;
     transition: 0.5s all;
     -webkit-transition: 0.5s all;
     -o-transition: 0.5s all; }
@@ -104,7 +104,7 @@ h4 {
     transition: 0.5s all;
     -webkit-transition: 0.5s all;
     -o-transition: 0.5s all;
-    background: #0d8ccc; }
+    box-shadow: inset 0px -4px 0px 2px #0d8ccc; }
 
 .maitTextContent {
   position: relative;
@@ -381,10 +381,8 @@ footer, .footer {
   z-index: 9050;
   display: none;
   position: fixed;
-  top: 50%;
+  top: 40px;
   left: 50%;
-  margin-top: -112.5px;
-  margin-left: -150px;
   background: #ffffff;
   height: 225px;
   width: 300px;
@@ -1170,7 +1168,7 @@ footer, .footer {
       display: none;
       color: #0066cc;
       font-size: 18px; }
-    .quest div input[type='checkbox'] {
+    .quest div input[type='radio'] {
       display: none; }
     .quest div span {
       position: absolute;
@@ -1217,7 +1215,7 @@ footer, .footer {
       display: none;
       color: #0066cc;
       font-size: 18px; }
-    .questNext div input[type='checkbox'] {
+    .questNext div input[type='radio'] {
       display: none; }
     .questNext div span {
       position: absolute;
@@ -1335,6 +1333,9 @@ footer, .footer {
   .slider {
     height: 420px; }
 
+  .callback {
+    left: 41%; }
+
   .maitTextContent:before {
     content: '';
     background: #003366;
@@ -1429,6 +1430,9 @@ footer, .footer {
 @media screen and (width: 768px) {
   .slide img {
     height: 317px; }
+
+  .sliderText {
+    margin-left: -300px; }
 
   .mCenter:after {
     content: none !important; }
@@ -1648,12 +1652,481 @@ footer, .footer {
 
   .questNext1 div {
     width: 270px; } }
+@media screen and (min-width: 568px) and (max-width: 750px) {
+  .width1100 {
+    width: 500px; }
+
+  .menuTopFixed {
+    top: 0; }
+
+  .sliderText {
+    margin-left: -50%; }
+
+  .mCenter:after {
+    content: none !important; }
+
+  .newsCurrent:after {
+    content: none !important; }
+
+  .mCenter:before {
+    content: none !important; }
+
+  .maitTextContent:after {
+    content: none !important; }
+
+  #arrow1:after {
+    content: none !important; }
+
+  #arrow2:after {
+    content: none !important; }
+
+  .maitTextContent:before {
+    content: none !important; }
+
+  .slider {
+    height: 400px; }
+    .slider div {
+      height: 400px;
+      width: 100%;
+      overflow: hidden; }
+      .slider div img {
+        position: relative;
+        height: 600px;
+        left: -361px;
+        max-width: 1920px; }
+
+  .sliderText {
+    width: 300px;
+    height: 132px;
+    margin-left: -50%;
+    margin-top: -60px; }
+    .sliderText span {
+      font-size: 20px; }
+    .sliderText p {
+      font-size: 16px; }
+
+  .btns {
+    margin: 0 auto;
+    width: 300px; }
+
+  .nav, .call1 {
+    float: right;
+    font-size: 25px;
+    line-height: 86px;
+    margin-left: 20px;
+    display: block; }
+
+  .menuTop {
+    height: auto; }
+    .menuTop ul {
+      z-index: 100;
+      position: absolute;
+      width: 300px;
+      float: none;
+      display: none;
+      margin: 0 auto;
+      background: #bad0ee; }
+      .menuTop ul li {
+        margin-left: 0;
+        float: none;
+        text-align: center;
+        float: none; }
+        .menuTop ul li a {
+          display: block; }
+
+  .topP {
+    display: none; }
+
+  .questNext1 div {
+    width: 100px; }
+
+  .maitTextContent {
+    width: 500px;
+    padding: 30px 20px;
+    float: none;
+    border: 0;
+    height: auto;
+    margin-bottom: 20px; }
+
+  .bg {
+    height: 50px; }
+    .bg a img {
+      display: none; }
+
+  .whatWeDo {
+    padding: 0 20px; }
+    .whatWeDo div:first-child {
+      display: none; }
+    .whatWeDo div {
+      width: 100%;
+      float: none; }
+
+  .waysWorks h4 {
+    font-size: 26px;
+    margin: 30px 0 25px; }
+  .waysWorks ul {
+    margin-bottom: 0; }
+    .waysWorks ul li {
+      width: 48%;
+      margin-left: 4%;
+      margin-bottom: 20px; }
+      .waysWorks ul li img {
+        width: 100px; }
+      .waysWorks ul li div {
+        width: 100%; }
+        .waysWorks ul li div p {
+          max-height: 144px;
+          overflow: hidden; }
+    .waysWorks ul li:nth-child(2n+1) {
+      margin-left: 0; }
+
+  a.active:before, a.active:after, a:hover:after, a:hover:before {
+    content: none !important; }
+
+  .workAU h1 {
+    font-size: 26px;
+    margin-bottom: 70px; }
+  .workAU div {
+    padding: 0 45px;
+    height: 942px; }
+    .workAU div ul li {
+      margin-left: 0;
+      width: 100%;
+      float: none;
+      margin-bottom: 20px; }
+      .workAU div ul li img {
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 30px; }
+      .workAU div ul li span {
+        margin-top: 10px; }
+
+  .workWithClient {
+    height: 1170px; }
+
+  .creatPO h4 {
+    font-size: 26px;
+    margin-top: 30px;
+    margin-bottom: 25px; }
+  .creatPO ul {
+    overflow: hidden; }
+    .creatPO ul li {
+      float: none;
+      width: 100%;
+      margin-left: 0; }
+      .creatPO ul li img {
+        padding-top: 10px;
+        margin-right: 10px;
+        max-width: 90px; }
+      .creatPO ul li div {
+        width: 310px;
+        margin-bottom: 20px; }
+        .creatPO ul li div span {
+          display: block;
+          margin-top: 0; }
+
+  .ourPart {
+    display: none; }
+
+  .curWidth {
+    width: 300px; }
+    .curWidth p {
+      display: none; }
+    .curWidth span {
+      padding-top: 0;
+      padding-bottom: 30px; }
+
+  .btns1 {
+    width: 300px;
+    margin-bottom: 20px; }
+
+  .width33 {
+    width: 100%;
+    display: block;
+    float: none; }
+    .width33 div {
+      margin-bottom: 20px !important; }
+
+  .posLapTop {
+    width: 100%;
+    display: block;
+    float: none; }
+    .posLapTop img {
+      display: none; }
+    .posLapTop #target {
+      width: auto;
+      height: auto;
+      background: none;
+      margin-top: 0;
+      margin-bottom: 20px; }
+      .posLapTop #target p {
+        width: 100%; }
+
+  .lapTop {
+    height: auto;
+    padding-bottom: 30px;
+    margin-bottom: 20px; }
+
+  .newsCurrent {
+    margin-left: 0;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 10px;
+    float: none;
+    width: 300px; }
+
+  .bottomMenu {
+    float: none;
+    margin-left: 0; }
+    .bottomMenu div {
+      text-align: center;
+      padding-left: 0;
+      padding-top: 8px;
+      line-height: 35px; }
+      .bottomMenu div a {
+        display: none; }
+    .bottomMenu ul {
+      display: none; }
+
+  .copy {
+    font-size: 11px; }
+
+  /* .bg {
+     height: 225px;
+   }*/
+  .contentPo {
+    width: 500px;
+    margin: 0 auto;
+    float: none;
+    padding: 20px;
+    box-sizing: border-box; }
+    .contentPo h1 {
+      font-size: 26px;
+      text-align: center; }
+    .contentPo span {
+      font-size: 20px;
+      text-align: center; }
+
+  .testing1, .testing2 {
+    float: none;
+    width: 500px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    border-right: none; }
+    .testing1 h5, .testing2 h5 {
+      text-align: center;
+      font-size: 26px; }
+    .testing1 ul, .testing2 ul {
+      width: auto;
+      padding-left: 0; }
+    .testing1 div, .testing2 div {
+      margin-left: 5px;
+      width: 350px; }
+
+  .testing {
+    overflow: hidden;
+    padding-top: 30px;
+    margin-bottom: 20px; }
+
+  .testing2 {
+    margin-top: 45px; }
+
+  .benefitsOfPo {
+    height: auto;
+    padding-bottom: 20px; }
+    .benefitsOfPo h5 {
+      margin-top: 30px;
+      margin-bottom: 25px;
+      font-size: 26px; }
+    .benefitsOfPo ul li {
+      width: 250px;
+      margin: 0 auto;
+      float: none;
+      margin-top: 30px; }
+    .benefitsOfPo ul li:first-child {
+      margin: 0 auto; }
+
+  .requirements h5 {
+    margin-top: 30px;
+    margin-bottom: 25px;
+    font-size: 26px; }
+  .requirements div {
+    margin-top: 20px;
+    width: 100%;
+    float: none; }
+    .requirements div span {
+      text-align: center; }
+    .requirements div p {
+      width: 500px; }
+
+  .contentFAQ {
+    padding: 10px; }
+
+  .messege p {
+    overflow-y: scroll;
+    height: 120px; }
+
+  .demo {
+    height: 500px; }
+
+  .demoContent {
+    height: auto;
+    padding: 10px;
+    padding-bottom: 20px;
+    box-sizing: border-box; }
+    .demoContent img {
+      display: none; }
+    .demoContent div {
+      padding-top: 30px;
+      float: none;
+      margin: 0 auto;
+      width: 100%; }
+      .demoContent div h1 {
+        font-size: 26px; }
+      .demoContent div span {
+        font-size: 20px;
+        margin-bottom: 10px; }
+      .demoContent div a {
+        width: 280px; }
+
+  #agreement {
+    width: 300px;
+    margin-left: -150px;
+    margin-top: -200px;
+    padding: 20px; }
+    #agreement > div {
+      height: 300px;
+      overflow-x: scroll; }
+    #agreement h4 {
+      font-size: 26px; }
+    #agreement form {
+      margin-top: 20px; }
+      #agreement form input[type='submit'] {
+        float: none;
+        display: block;
+        margin: 0 auto;
+        margin-top: 20px; }
+
+  .agreementCheckbox {
+    width: 100px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    display: block; }
+
+  .orderH1 h1 {
+    font-size: 26px; }
+  .orderH1 span {
+    margin-bottom: 30px;
+    font-size: 20px; }
+
+  .lFormOrder, .rFormOrder, .lForm, .rForm {
+    width: 500px;
+    float: none;
+    margin: 0 auto;
+    font-size: 12px; }
+    .lFormOrder p, .rFormOrder p, .lForm p, .rForm p {
+      margin: 10px 0; }
+    .lFormOrder input, .rFormOrder input, .lForm input, .rForm input {
+      width: 500px; }
+    .lFormOrder textarea, .rFormOrder textarea, .lForm textarea, .rForm textarea {
+      margin: 24px 0 45px;
+      width: 500px; }
+
+  .btns2 {
+    font-size: 14px;
+    width: 250px;
+    background: #fff;
+    display: block;
+    height: 40px;
+    line-height: 40px; }
+
+  .quest, .questNext {
+    height: auto;
+    padding-bottom: 10px; }
+    .quest p, .questNext p {
+      width: 100%;
+      float: none; }
+    .quest div, .questNext div {
+      float: none;
+      margin-left: 20px; }
+
+  .orderS {
+    height: auto !important; }
+
+  .m0 {
+    margin-top: 0 !important; }
+
+  .rForm textarea {
+    margin: 24px 0 30px; }
+
+  .lFormOrder input:first-of-type {
+    margin-top: 45px; }
+
+  .order {
+    height: 1500px; }
+
+  .breadCrumbs > div {
+    width: 300px;
+    height: 110px;
+    box-sizing: border-box;
+    padding-top: 20px; }
+    .breadCrumbs > div h1 {
+      font-size: 26px;
+      text-align: center; }
+    .breadCrumbs > div span {
+      font-size: 20px; }
+
+  .contact {
+    padding-bottom: 40px;
+    height: auto;
+    background-size: cover; }
+    .contact h1 {
+      font-size: 26px;
+      padding-top: 20px;
+      margin-bottom: 20px; }
+    .contact ul {
+      width: 100%; }
+      .contact ul li {
+        margin: 0 auto;
+        margin-bottom: 30px;
+        display: block;
+        float: none; }
+        .contact ul li i {
+          margin-bottom: 15px; }
+      .contact ul li:first-child {
+        margin: 0 auto;
+        margin-bottom: 30px; }
+
+  .NewsContent {
+    width: 300px;
+    top: 0; }
+    .NewsContent img {
+      margin-bottom: 20px; }
+    .NewsContent span {
+      font-size: 14px;
+      display: block;
+      padding: 0 10px; }
+    .NewsContent p {
+      font-size: 14px;
+      padding: 20px;
+      width: 100%;
+      box-sizing: border-box; }
+
+  .newsBg {
+    height: auto;
+    margin-bottom: 0; }
+
+  .partners1 {
+    width: 300px; } }
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .width1100 {
     width: 300px; }
 
   .menuTopFixed {
     top: 0; }
+
+  .sliderText {
+    margin-left: -50%; }
 
   .mCenter:after {
     content: none !important; }
@@ -1691,7 +2164,7 @@ footer, .footer {
   .sliderText {
     width: 300px;
     height: 132px;
-    margin-left: -150px;
+    margin-left: -50%;
     margin-top: -60px; }
     .sliderText span {
       font-size: 20px; }
@@ -2108,5 +2581,35 @@ footer, .footer {
 
   .partners1 {
     width: 300px; } }
+@media screen and (min-width: 1025px) {
+  .width33 img, #target img {
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -o-transition: 0.5s all; }
+  .width33 img:hover, #target img:hover {
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -ms-filter: grayscale(0.2) sepia(1) contrast(0.1);
+    filter: grayscale(0.2) sepia(1) contrast(0.1);
+    -web-filter: grayscale(0.2) sepia(1) contrast(0.1); }
+
+  .newsCurrent div {
+    width: 535px;
+    height: 263px;
+    overflow: hidden; }
+    .newsCurrent div img {
+      transition: 0.5s all;
+      -webkit-transition: 0.5s all;
+      -o-transition: 0.5s all; }
+    .newsCurrent div img:hover {
+      transition: 0.5s all;
+      -webkit-transition: 0.5s all;
+      -o-transition: 0.5s all;
+      -webkit-transform: scale(1.05);
+      -moz-transform: scale(1.05);
+      -ms-transform: scale(1.05);
+      -o-transform: scale(1.05);
+      transform: scale(1.05); } }
 
 /*# sourceMappingURL=style.css.map */
