--- a/LPI/css/style.css
+++ b/LPI/css/style.css
@@ -608,7 +608,6 @@ footer, .footer {
   float: right; }
 
 .newsBg {
-  height: 820px;
   background: #f0f0f0;
   margin-bottom: 70px; }
 
@@ -628,6 +627,20 @@ footer, .footer {
     font-size: 16px;
     color: #000;
     line-height: 24px; }
+
+.ph72 div {
+  height: 72px;
+  overflow: hidden; }
+
+.toggle-button {
+  cursor: pointer;
+  color: #003366;
+  font-size: 14px;
+  margin-top: 20px;
+  display: inline-block; }
+
+.toggle-button:hover {
+  text-decoration: underline !important; }
 
 .demo {
   background: url("../img/demoBG.jpg");
@@ -1073,6 +1086,7 @@ footer, .footer {
     /*border: 1px solid #0099ff;*/
     color: #959595; }
   .rForm textarea {
+    font-size: 16px;
     padding-left: 12px;
     color: #959595;
     padding-top: 12px;
@@ -2164,7 +2178,8 @@ footer, .footer {
         position: relative;
         height: 400px;
         left: -361px;
-        max-width: 1920px; }
+        max-width: 1920px;
+        width: 970px; }
 
   .sliderText {
     width: 300px;
