--- a/LPI/css/style.css
+++ b/LPI/css/style.css
@@ -1086,6 +1086,7 @@ footer, .footer {
     /*border: 1px solid #0099ff;*/
     color: #959595; }
   .rForm textarea {
+    font-family: roboto, sans-serif;
     font-size: 16px;
     padding-left: 12px;
     color: #959595;
