--- a/Legsemporium/css/styles.css
+++ b/Legsemporium/css/styles.css
@@ -3238,7 +3238,7 @@ label {
 
 /*>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>BLOG<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<*/
 .cutter {
-  margin: 0 -10px; }
+  margin: 0; }
 
 .blog_list_content {
   text-align: center;
