--- a/Domolend/css/style.scss
+++ b/Domolend/css/style.scss
@@ -101,6 +101,54 @@ ul, li {
   }
 }
 
+.house {
+  width: 175px;
+  float: right;
+  position: relative;
+  img {
+    float: right;
+    margin-bottom: 20px;
+  }
+}
+
+.adwise {
+  padding: 10px 0;
+  border: 1px solid #3fac00;
+  width: 100px;
+  border-radius: 25px;
+  box-sizing: border-box;
+  text-align: center;
+  line-height: 18px;
+  font-size: 12px;
+  position: relative;
+  span {
+    display: block;
+  }
+}
+
+.adwise::before, .adwise::after {
+  content: '';
+  position: absolute;
+  left: 20px;
+  bottom: -20px;
+  border: 10px solid transparent;
+  border-top: 10px solid #3fac00;
+}
+
+.adwise::after {
+  border-top: 10px solid white;
+  bottom: -19px;
+}
+
+.close {
+  text-align: right;
+  i {
+    cursor: pointer;
+    color: #642bb1;
+    font-size: 14px;
+  }
+}
+
 .video {
   margin: 0 auto;
   display: block;
@@ -164,6 +212,28 @@ ul, li {
   margin-bottom: 20px;
 }
 
+.error {
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 320px;
+  min-height: 375px;
+  span {
+    font-size: 29px;
+    line-height: 48px;
+    color: #642bb1;
+    display: block;
+    margin-bottom: 10px;
+  }
+
+}
+
 .mMenu {
   background: #f5f5f5;
 }
@@ -215,7 +285,7 @@ ul, li {
 
 }
 
-.bucket:hover {
+.buckets:hover {
   #orders {
     -webkit-transform: scale(1) translate(0px, 0px);
     -moz-transform: scale(1) translate(0px, 0px);
@@ -227,11 +297,15 @@ ul, li {
   }
 }
 
+.buckets {
+  position: relative;
+}
+
 .multibucket {
   margin-top: 28px;
 }
 
-.likeWatch, .bucket {
+.likeWatch, .bucket, .buckets {
   display: inline-block;
 }
 
@@ -547,6 +621,99 @@ ul, li {
   left: 0;
   width: 100%;
   height: 100%;
+
+  img {
+    max-width: 100%;
+    width: 100%;
+  }
+  > div {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 480px;
+    width: 66%;
+    padding-right: 65px;
+    padding-top: 40px;
+    box-sizing: border-box;
+    div {
+      position: relative;
+      z-index: 2;
+      text-align: right;
+
+      h2 {
+        font-weight: bold;
+        font-size: 48px;
+        color: #ffffff;
+        font-family: 'Roboto', sans-serif;
+        line-height: 48px;
+      }
+      p {
+        font-size: 20px;
+        color: #ffffff;
+        font-family: 'Roboto', sans-serif;
+        line-height: 36px;
+      }
+      span {
+        font-size: 72px;
+        color: #ffcc33;
+        font-family: 'Roboto', sans-serif;
+      }
+    }
+    a {
+      display: inline-block;
+      cursor: pointer;
+      width: 130px;
+      height: 40px;
+      background: #ffcc33;
+      border: none;
+      transition: 0.3s all;
+      -webkit-transition: 0.3s all;
+      -o-transition: 0.3s all;
+      -moz-transition: 0.3s all;
+      text-align: center;
+      line-height: 40px;
+      font-weight: bold;
+      position: relative;
+      z-index: 2;
+      border-radius: 5px;
+      float: right;
+      @include transition(0.3s, all);
+      margin-top: 34px;
+    }
+    a:hover {
+
+      background: #3fac00;
+      color: white;
+      @include transition(0.3s, all);
+
+    }
+  }
+  > div:before {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0.6;
+    background: url("../img/slideBg.png") no-repeat;
+    -ms-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-size: cover;
+  }
+}
+
+.slideImg {
+  img {
+    max-width: 148px;
+    display: block;
+    margin-left: 10px;
+    float: right;
+  }
 }
 
 .active-slide {
@@ -554,6 +721,7 @@ ul, li {
 }
 
 .left_Arrow, .right_Arrow {
+  z-index: 5;
   cursor: pointer;
   position: absolute;
   top: 45%;
@@ -2017,6 +2185,11 @@ a.moveWithOutRegistration:hover {
   height: 110px;
   padding-top: 20px;
   border-bottom: 1px solid #f5f5f5;
+}
+
+.aboutTov {
+  float: left;
+  width: 135px;
 }
 
 .tovLeftPart {
@@ -3764,6 +3937,110 @@ hr {
   .width1000 {
     width: 700px;
   }
+  .active-slide {
+    display: block !important;
+  }
+  .slide {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    img {
+      max-width: 100%;
+      width: 100%;
+    }
+    > div {
+      position: absolute;
+      right: 0;
+      top: 0;
+      height: 370px;
+      width: 66%;
+      padding-right: 65px;
+      padding-top: 40px;
+      box-sizing: border-box;
+      div {
+        position: relative;
+        z-index: 2;
+        text-align: right;
+
+        h2 {
+          font-weight: bold;
+          font-size: 48px;
+          color: #ffffff;
+          font-family: 'Roboto', sans-serif;
+          line-height: 48px;
+        }
+        p {
+          font-size: 20px;
+          color: #ffffff;
+          font-family: 'Roboto', sans-serif;
+          line-height: 36px;
+        }
+        span {
+          font-size: 72px;
+          color: #ffcc33;
+          font-family: 'Roboto', sans-serif;
+        }
+      }
+      a {
+        display: inline-block;
+        cursor: pointer;
+        width: 130px;
+        height: 40px;
+        background: #ffcc33;
+        border: none;
+        transition: 0.3s all;
+        -webkit-transition: 0.3s all;
+        -o-transition: 0.3s all;
+        -moz-transition: 0.3s all;
+        text-align: center;
+        line-height: 40px;
+        font-weight: bold;
+        position: relative;
+        z-index: 2;
+        border-radius: 5px;
+        float: right;
+        @include transition(0.3s, all);
+        margin-top: 34px;
+      }
+      a:hover {
+        background: #3fac00;
+        color: white;
+        @include transition(0.3s, all);
+
+      }
+    }
+    > div:before {
+      content: "";
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      opacity: 0.6;
+      background: url("../img/slideBg.png") no-repeat;
+      -ms-background-size: cover;
+      -o-background-size: cover;
+      -moz-background-size: cover;
+      -webkit-background-size: cover;
+      background-size: cover;
+    }
+  }
+
+  .slideImg {
+    display: none;
+    img {
+      max-width: 148px;
+      display: block;
+      margin-left: 10px;
+      float: right;
+    }
+  }
 
   .callbackForm:after {
     content: '';
@@ -4089,6 +4366,62 @@ hr {
 
 @media screen and(min-width: 320px) and(max-width: 425px) {
 
+  .active-slide {
+    display: block !important;
+  }
+
+  .slide {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    img {
+      max-width: 100%;
+      width: 100%;
+    }
+    > div {
+      display: none;
+      position: absolute;
+      right: 0;
+      top: 0;
+      height: 370px;
+      width: 66%;
+      padding-right: 65px;
+      padding-top: 40px;
+      box-sizing: border-box;
+    }
+    > div:before {
+      content: "";
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      opacity: 0.6;
+      background: url("../img/slideBg.png") no-repeat;
+      -ms-background-size: cover;
+      -o-background-size: cover;
+      -moz-background-size: cover;
+      -webkit-background-size: cover;
+      background-size: cover;
+    }
+  }
+
+  .slideImg {
+    display: none;
+    img {
+      max-width: 148px;
+      display: block;
+      margin-left: 10px;
+      float: right;
+    }
+  }
+
   .pDescriptionButt {
     width: 100%;
   }
@@ -4171,6 +4504,7 @@ hr {
   }
 
   .left_Arrow, .right_Arrow {
+    z-index: 5;
     width: 30px;
     height: 30px;
     font-size: 16px;
@@ -4537,7 +4871,7 @@ hr {
     margin-top: 10px;
   }
 
-  .bucket:hover {
+  .buckets:hover {
     #orders {
       display: none;
     }
