--- a/Legsemporium/css/styles.css
+++ b/Legsemporium/css/styles.css
@@ -1817,6 +1817,10 @@ footer {
     vertical-align: top;
     display: inline-block; }
 
+  .e_money img {
+      min-width: 35px;
+  }
+
 .menu_item {
   position: relative;
   -webkit-transition: all ease-out 0.4s;
