--- a/RegentHill/css/styles.css
+++ b/RegentHill/css/styles.css
@@ -111,7 +111,7 @@ table {
   height: auto; }
 
 .index {
-  margin-left: 220px;
+  margin-left: 180px;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden; }
 
@@ -624,7 +624,7 @@ menu {
   margin-bottom: 150px;
   top: 0;
   position: absolute;
-  left: 60px;
+  left: 40px;
   letter-spacing: 1px;
   line-height: 2.25em;
   width: 134px;
@@ -661,24 +661,24 @@ menu {
       font-family: "Font Awesome", sans-serif; }
     menu > li:nth-child(3):before {
       content: "";
-      left: -25px;
+      left: -24px;
       top: 50%;
       -webkit-transform: translateY(-50%);
           -ms-transform: translateY(-50%);
               transform: translateY(-50%);
       position: absolute;
-      height: 20px;
-      width: 20px;
-      background: url("../images/svg/nav/handshake.svg") no-repeat center center;
-      background-size: cover; }
-    menu > li:nth-child(4):before {
-      content: "";
-      left: -23px;
-      top: 5px;
-      position: absolute;
       height: 23px;
       width: 17px;
       background: url("../images/svg/nav/menu.svg") no-repeat center center;
+      background-size: cover; }
+    menu > li:nth-child(4):before {
+      content: "";
+      left: -25px;
+      top: 7px;
+      position: absolute;
+      height: 20px;
+      width: 20px;
+      background: url("../images/svg/nav/handshake.svg") no-repeat center center;
       background-size: cover; }
     menu > li:nth-child(5):before {
       content: "";
@@ -762,13 +762,13 @@ aside {
   height: 100%;
   overflow: hidden;
   text-align: center;
-  width: 220px;
+  width: 180px;
   background-color: #3c3c3b;
   -webkit-transition: width ease-in-out .3s;
   transition: width ease-in-out .3s; }
   aside .wrapper {
     position: absolute;
-    width: 220px;
+    width: 180px;
     top: 0;
     -webkit-box-sizing: initial;
             box-sizing: initial;
@@ -798,17 +798,17 @@ aside {
     z-index: 1099;
     width: 60px; }
     .inner_page aside:hover {
-      width: 220px; }
+      width: 180px; }
       .inner_page aside:hover menu a, .inner_page aside:hover .contact_date, .inner_page aside:hover .languages, .inner_page aside:hover .social {
         opacity: 1; }
     .inner_page aside:hover menu {
-      left: 60px; }
+      left: 40px; }
       .inner_page aside:hover menu li {
         height: auto; }
         .inner_page aside:hover menu li:before {
           left: -25px; }
     .inner_page aside:hover .wrapper {
-      width: 220px; }
+      width: 180px; }
     .inner_page aside:hover .logo img:first-child {
       display: block; }
     .inner_page aside:hover .logo img:last-child {
@@ -1688,9 +1688,9 @@ aside {
     left: 24px; }
 
 .apartment_block {
-  margin-bottom: 136px; }
+  margin-bottom: 12px; }
   .apartment_block .header-for-all {
-    margin: 0 auto 12px auto; }
+    margin: 48px auto 36px auto; }
 
 .apartment_row {
   width: 33.333333%;
@@ -2037,14 +2037,19 @@ aside {
       .bread_crumbs_block ul li a:hover, .gallery_bread_crumbs_block ul li a:hover {
         color: #d8bf8b; }
 
+      .item_cutter {
+        overflow: hidden;
+        position: relative;
+      }
+
 .menu-content_block, .gallery-content_block {
-  width: 50%;
+  width: 75%;
   margin: 96px auto 138px; }
   .menu-content_block .item, .gallery-content_block .item {
     padding: 12px;
     position: relative;
     background-size: cover;
-    width: 50%;
+    width: 33.333333%;
     float: left; }
     .menu-content_block .item:hover .image_container, .gallery-content_block .item:hover .image_container {
       -webkit-box-shadow: 0 2px 15px 5px;
@@ -2059,9 +2064,9 @@ aside {
           -ms-transform: scale(1.3);
               transform: scale(1.3); }
     .menu-content_block .item:hover .icon_container h2, .gallery-content_block .item:hover .icon_container h2 {
-      -webkit-transform: scale(1.3) translate(0, 20px);
-          -ms-transform: scale(1.3) translate(0, 20px);
-              transform: scale(1.3) translate(0, 20px); }
+      -webkit-transform: scale(1.1) translate(0, 20px);
+          -ms-transform: scale(1.1) translate(0, 20px);
+              transform: scale(1.1) translate(0, 20px); }
     .menu-content_block .item .image_container, .gallery-content_block .item .image_container {
       -webkit-transition: all ease-in-out 0.4s;
       transition: all ease-in-out 0.4s; }
@@ -2286,7 +2291,7 @@ aside {
             backface-visibility: hidden;
     left: 24px;
     position: absolute;
-    top: 28%;
+    top: 40%;
     -webkit-transform: translate(0, -50%);
         -ms-transform: translate(0, -50%);
             transform: translate(0, -50%);
@@ -2305,7 +2310,10 @@ aside {
       color: #ffffff;
       font-size: 2em;
       text-align: center;
-      padding-right: 5px;
+      padding-right: 85px;
+      padding-top: 130px;
+      padding-bottom: 130px;
+      padding-left: 80px;
       display: block;
       line-height: 0.8125em;
       content: "\f104";
@@ -2316,7 +2324,7 @@ aside {
     left: auto;
     right: 24px; }
     .menu_carousel .owl-next:before {
-      padding-left: 5px;
+      padding-left: 85px;
       content: "\f105";
       font-family: "Font Awesome", sans-serif; }
   .menu_carousel .owl-stage-outer {
@@ -2452,9 +2460,9 @@ aside {
       text-transform: none; }
 
 .gallery-content_block {
-  width: 100%; }
+  width: 75%; }
   .gallery-content_block .item {
-    width: 25%; }
+    width: 33.333333%; }
 
 .contacts-header_block {
   background: url("../images/contacts_header.png") no-repeat center center; }
@@ -3082,13 +3090,14 @@ aside {
     padding-left: 60px; }
 
 .guests_photo_block {
-  margin-bottom: 90px; }
+  margin-bottom: 110px; }
   .guests_photo_block .item {
     position: relative;
     width: 25%;
     float: left;
     padding: 12px; }
     .guests_photo_block .item .description {
+      cursor: pointer;
       text-align: center;
       padding: 24px;
       position: absolute;
@@ -3108,7 +3117,7 @@ aside {
         left: -12px;
         right: -12px;
         border: 1px solid #c1a263;
-        content: "";
+        content: none;
         position: absolute; }
 
 .partners_logo .item {
@@ -3126,6 +3135,9 @@ aside {
 .event_gallery {
   margin-bottom: 138px; }
 
+.apartment_event_gallery {
+  margin-bottom: 0;
+}
 .event_for_one_block_container {
   position: relative;
   margin-bottom: 130px;
@@ -3230,9 +3242,19 @@ footer {
 
 @media screen and (max-width: 1315px) {
   .container {
-    padding: 0 10px; } }
+    padding: 0 10px; }
+
+  .menu_carousel .owl-prev, .menu_carousel .owl-next {
+    top: 30%;
+  }
+}
 
 @media screen and (max-width: 1024px) {
+
+  .menu-content_block {
+    width: 100%;
+  }
+
   .hall_item .description .wrapper {
     -webkit-box-sizing: border-box;
             box-sizing: border-box; }
@@ -3379,8 +3401,6 @@ footer {
       -webkit-transform: translate(-50%, 0);
           -ms-transform: translate(-50%, 0);
               transform: translate(-50%, 0); }
-  .menu-content_block {
-    width: 75%; }
   .apartment_hover {
     left: 18px;
     right: 18px;
@@ -3390,6 +3410,10 @@ footer {
     padding: 24px 12px; } }
 
 @media screen and (max-width: 768px) {
+
+  .menu-content_block .item {
+    width: 50%;
+  }
   .count_result .result_item {
     padding: 0 6px; }
   .margin {
