--- a/RegentHill_eddits/css/styles.css
+++ b/RegentHill_eddits/css/styles.css
@@ -274,7 +274,7 @@ table {
 .logo_mob {
   max-width: 38px; }
   .logo_mob img {
-    display: block; }
+    display: none; }
 
 .mobile_wrapper {
   display: none;
@@ -288,7 +288,7 @@ table {
   width: 100%;
   background: #666666;
   position: absolute;
-  top: 80px;
+  top: 56px;
   right: 0;
   z-index: 1007; }
   .mobile_footer > ul {
@@ -381,7 +381,7 @@ table {
       top: 0;
       position: relative; }
   .mobile_menu .right, .mobile_menu .left {
-    padding: 24px 0;
+    padding: 15px 0 10px;
     float: left;
     width: 50%; }
   .mobile_menu .left {
@@ -594,7 +594,7 @@ table {
 
 .social {
   position: absolute;
-  bottom: -290px;
+  bottom: -320px;
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -794,6 +794,9 @@ aside {
   .inner_page .logo img:last-child {
     padding-bottom: 12px;
     display: block; }
+  .inner_page .logo {
+    display: none;
+  }
   .inner_page aside {
     z-index: 1099;
     width: 60px; }
@@ -813,6 +816,9 @@ aside {
       display: block; }
     .inner_page aside:hover .logo img:last-child {
       display: none; }
+    .inner_page aside:hover .logo {
+      display: block;
+    }
     .inner_page aside .wrapper {
       width: 60px;
       -webkit-box-sizing: initial;
@@ -1458,6 +1464,10 @@ aside {
       font-weight: 100;
       color: #ffffff;
       text-transform: auto; }
+
+.slider_block .slider_description h1 a{
+  color: #ffffff;
+ }
 
 .slick-next:before, .slick-prev:before {
   font-size: 50px;
@@ -2435,7 +2445,6 @@ aside {
   .one_item .description_icon {
     z-index: 1001;
     position: absolute;
-    position: absolute;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
@@ -2526,9 +2535,13 @@ aside {
   min-height: 624px;
   width: 100%; }
 
+.vacancies {
+  margin-top: 48px;
+}
+
 .form_block {
   margin-top: 72px;
-  margin-bottom: 144px;
+  margin-bottom: 72px;
   border: 6px solid #ece3d0; }
   .form_block .left, .form_block .right {
     padding: 42px;
@@ -2882,8 +2895,8 @@ aside {
 
 .vacancies_item {
   padding: 0 12px;
-  width: 33.333333%;
-  float: left;
+  width: 100%;
+  /*float: left;*/
   text-align: left; }
   .vacancies_item h3 {
     padding-bottom: 12px;
@@ -2908,7 +2921,7 @@ aside {
     color: #3c3c3b;
     text-transform: auto; }
   .vacancies_item p {
-    min-height: 168px;
+    /*min-height: 168px;*/
     font-family: "PTSans Regular", sans-serif;
     font-size: 1.125em;
     font-weight: 100;
@@ -3323,8 +3336,11 @@ footer {
     margin-left: 0; } }
 
 @media screen and (max-width: 960px) {
+  .mobile_footer > ul {
+    padding: 12px 12px;
+  }
   .mobile_footer > ul > li {
-    font-size: 1em; }
+    font-size: 0.7em; }
   .hall_item .description .wrapper {
     height: auto;
     width: auto;
